--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+ï»¿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 <head>
@@ -79,7 +79,7 @@
  <tr>
   <td align="center"> <img src="images/Eng.jpg" height="22" width="36" /> <strong> eng </strong> </td>
   <td align="center"> <a href="index_deu.htm" target="MENU"> <img src="images/Deu.png" height="22" width="32" /> <strong> deu </strong> </a> </td>
-  <td align="center"> <a href="index_rus.htm" target="MENU"> <img src="images/Rus.png" height="22" width="32" /> <strong> ğóñ </strong> </a> </td>
+  <td align="center"> <a href="index_rus.htm" target="MENU"> <img src="images/Rus.png" height="22" width="32" /> <strong> Ñ€ÑƒÑ </strong> </a> </td>
  </tr>
 </table>
 
@@ -90,7 +90,7 @@
     Polarization was always there, but people were opposed by people not armed with a psycho machines.  <br />
 
     Surprisingly, this - the most important issue - is hardly discussed! <br />
-    The terrible is not “Manipulated democracy”, but the fact that it can lead to the death of mankind. But people do not see it. </p>
+    The terrible is not â€œManipulated democracyâ€, but the fact that it can lead to the death of mankind. But people do not see it. </p>
 
 <p>  Public attention and a network that would deal with this problem are needed. <br />
     If you agree with this, then could you express your opinion - what to do ? <br />
@@ -100,7 +100,7 @@
     3. It would allow, it is desirable, arbitrary structuring according to the opinions of participants.  <br />
     4. It would not use, it is desirable, anonymizer , since their use is prohibited. </p>
 
-<p> We are a supporter of non-violence and intend to act 100% openly and within the framework of the law, but I am afraid to create an organization through social networks such as «VKontakte», since the issues affect the existing manipulation and polarization.  <br />
+<p> We are a supporter of non-violence and intend to act 100% openly and within the framework of the law, but I am afraid to create an organization through social networks such as Â«VKontakteÂ», since the issues affect the existing manipulation and polarization.  <br />
     We do not want to complicate the lives of participants living in authoritarian countries by divulging their personal data. </p>
 
 <p> Reckon on not to hide, but to:  <br />
@@ -112,17 +112,17 @@
     4.1. The cooperation of the participants is limited to the issues of survival of Civilization. <br />
     4.2. Independent arbitrary structuring, grouping of participants.  </p>
 
-<p> Statements, for example, are not prosecuted in social networks , even «extremist»,  <br />
+<p> Statements, for example, are not prosecuted in social networks , even Â«extremistÂ»,  <br />
     But there is a criterion in the s-service manual - Creating an organization using social networks? <br />
-    S-services are only interested by «destabilizing» actions and «here and now»? <br />
-    Where are there more tips on personal safety , statistics of «violations» - repressions?  </p>
+    S-services are only interested by Â«destabilizingÂ» actions and Â«here and nowÂ»? <br />
+    Where are there more tips on personal safety , statistics of Â«violationsÂ» - repressions?  </p>
 
 <p> For example, participants can develop recommendations for themselves on: <br />
     1. Activities under the law. <br />
     2. The increase in the costs of hunt down and interference. </p>
 
 <h5> How to connect like-minded people on the topic ?: </h5>
-<p> By «network marketing» mailing via e-mail it is not possible to gather like-minded people.  <br />
+<p> By Â«network marketingÂ» mailing via e-mail it is not possible to gather like-minded people.  <br />
     We will try to compromise: <br />
     1. I still use Facebook, but not for correspondence, but for the swapping by e-mails. <br />
     2. Openness on my part. </p>
@@ -132,7 +132,7 @@
     Or generally speak out on the problem. </p>
 
 <p> Inform you about the progress of this project? <br />
-    We also propose not to respond to insults - not to succumb to the provocations of «satanization». </p>
+    We also propose not to respond to insults - not to succumb to the provocations of Â«satanizationÂ». </p>
 
 <h5>P p Emer s my x ( Edil Edil ) Commentary s : </h5>
 <p> www.svoboda.org/a/30529054.html <br />
