--- a/index_rus.htm
+++ b/index_rus.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+п»ї<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 <head>
@@ -20,7 +20,7 @@
 
 <ul>
  <li>  <a href="index_rus.htm">
-     Главная </a>
+     Р“Р»Р°РІРЅР°СЏ </a>
  </li>
 
 
@@ -28,43 +28,43 @@
  </li>
 
 <li>   <a href="2024_Rus/11The_AI_threat_is_from_humans.htm">
-     ИИ-угроза - от людей </a>
+     РР-СѓРіСЂРѕР·Р° - РѕС‚ Р»СЋРґРµР№ </a>
  </li>
 <li>   <a href="2024_Rus/12Deliberative_network.htm">
-     Совещательная сеть </a>
+     РЎРѕРІРµС‰Р°С‚РµР»СЊРЅР°СЏ СЃРµС‚СЊ </a>
  </li>
 <li>   <a href="2024_Rus/21Anarchism_and_Capitalism.htm">
-     Анархизм и Капитализм </a>
+     РђРЅР°СЂС…РёР·Рј Рё РљР°РїРёС‚Р°Р»РёР·Рј </a>
  </li>
 <li>   <a href="2024_Rus/22Can_Anarchy_be_Effective_Letter_to_NAFO.htm">
-     Может ли Анархия быть эффективной. Письмо к NAFO </a>
+     РњРѕР¶РµС‚ Р»Рё РђРЅР°СЂС…РёСЏ Р±С‹С‚СЊ СЌС„С„РµРєС‚РёРІРЅРѕР№. РџРёСЃСЊРјРѕ Рє NAFO </a>
  </li>
 <li>   <a href="2024_Rus/23Anarchism_and_Nonviolence.htm">
-     Анархизм Ненасилие </a>
+     РђРЅР°СЂС…РёР·Рј РќРµРЅР°СЃРёР»РёРµ </a>
  </li>
 <li>   <a href="2024_Rus/24Criticism_of_Program_of_ComParty_Britain.htm">
-     Критика Программы Компартии Великобритании </a>
+     РљСЂРёС‚РёРєР° РџСЂРѕРіСЂР°РјРјС‹ РљРѕРјРїР°СЂС‚РёРё Р’РµР»РёРєРѕР±СЂРёС‚Р°РЅРёРё </a>
  </li>
 <li>   <a href="2024_Rus/31Breaking_deadlock_Letter_to_EconomistMag.htm">
-     Выход из тупика. Письмо в Журнал Economist  </a>
+     Р’С‹С…РѕРґ РёР· С‚СѓРїРёРєР°. РџРёСЃСЊРјРѕ РІ Р–СѓСЂРЅР°Р» Economist  </a>
  </li>
 <li>   <a href="2024_Rus/32Getting_ready_to_kiss_Putin-s_ass.htm">
-     Готовимся целовать Путину попу. Непримиримые </a>
+     Р“РѕС‚РѕРІРёРјСЃСЏ С†РµР»РѕРІР°С‚СЊ РџСѓС‚РёРЅСѓ РїРѕРїСѓ. РќРµРїСЂРёРјРёСЂРёРјС‹Рµ </a>
  </li>
 <li>   <a href="2024_Rus/33Demonopolization_of_the_Army_Free_Army.htm">
-     Демонополизация армии. Свободная армия </a>
+     Р”РµРјРѕРЅРѕРїРѕР»РёР·Р°С†РёСЏ Р°СЂРјРёРё. РЎРІРѕР±РѕРґРЅР°СЏ Р°СЂРјРёСЏ </a>
  </li>
 <li>   <a href="2024_Rus/41The_Free_Russia_Program.htm">
-     Программа Свободной России </a>
+     РџСЂРѕРіСЂР°РјРјР° РЎРІРѕР±РѕРґРЅРѕР№ Р РѕСЃСЃРёРё </a>
  </li>
 <li>   <a href="2024_Rus/51Anti-migration_democratic_initiative.htm">
-     Анти-миграционная демократич инициатива </a>
+     РђРЅС‚Рё-РјРёРіСЂР°С†РёРѕРЅРЅР°СЏ РґРµРјРѕРєСЂР°С‚РёС‡ РёРЅРёС†РёР°С‚РёРІР° </a>
  </li>
 <li>   <a href="2024_Rus/71I_have_a_dream.htm">
-     Я имею мечту </a>
+     РЇ РёРјРµСЋ РјРµС‡С‚Сѓ </a>
  </li>
 <li>   <a href="2024_Rus/81Astronomer_Concept.htm">
-     Астроном Концепт </a>
+     РђСЃС‚СЂРѕРЅРѕРј РљРѕРЅС†РµРїС‚ </a>
  </li>
 
 
@@ -79,62 +79,62 @@
  <tr>
   <td align="center"> <a href="index.htm" target="MENU"> <img src="images/Eng.jpg" height="22" width="36" /> <strong> eng </strong> </a> </td>
   <td align="center"> <a href="index_deu.htm" target="MENU"> <img src="images/Deu.png" height="22" width="32" /> <strong> deu </strong> </a> </td>
-  <td align="center"> <img src="images/Rus.png" height="22" width="32" /> <strong> рус </strong> </td>
+  <td align="center"> <img src="images/Rus.png" height="22" width="32" /> <strong> СЂСѓСЃ </strong> </td>
  </tr>
 </table>
 
 
-<h1> Сеть выживания человечества: </h1>
+<h1> РЎРµС‚СЊ РІС‹Р¶РёРІР°РЅРёСЏ С‡РµР»РѕРІРµС‡РµСЃС‚РІР°: </h1>
 
-<p> Мы обеспокоены угрозой гибели человечества вследствие социальной поляризации при использовании Искусственного интеллекта для  манипуляции людьми. <br />
-  Поляризация была всегда, но людям противостояли люди не  вооруженные псих.машинами. <br />
+<p> РњС‹ РѕР±РµСЃРїРѕРєРѕРµРЅС‹ СѓРіСЂРѕР·РѕР№ РіРёР±РµР»Рё С‡РµР»РѕРІРµС‡РµСЃС‚РІР° РІСЃР»РµРґСЃС‚РІРёРµ СЃРѕС†РёР°Р»СЊРЅРѕР№ РїРѕР»СЏСЂРёР·Р°С†РёРё РїСЂРё РёСЃРїРѕР»СЊР·РѕРІР°РЅРёРё РСЃРєСѓСЃСЃС‚РІРµРЅРЅРѕРіРѕ РёРЅС‚РµР»Р»РµРєС‚Р° РґР»СЏ  РјР°РЅРёРїСѓР»СЏС†РёРё Р»СЋРґСЊРјРё. <br />
+  РџРѕР»СЏСЂРёР·Р°С†РёСЏ Р±С‹Р»Р° РІСЃРµРіРґР°, РЅРѕ Р»СЋРґСЏРј РїСЂРѕС‚РёРІРѕСЃС‚РѕСЏР»Рё Р»СЋРґРё РЅРµ  РІРѕРѕСЂСѓР¶РµРЅРЅС‹Рµ РїСЃРёС….РјР°С€РёРЅР°РјРё. <br />
 
-  Удивительно, но эта - самая важная проблема – почти не обсуждается! <br />
-  Страшна не «Управляемая демократия», а то, что она может привести к гибели человечества. Но люди не видят этого. </p>
+  РЈРґРёРІРёС‚РµР»СЊРЅРѕ, РЅРѕ СЌС‚Р° - СЃР°РјР°СЏ РІР°Р¶РЅР°СЏ РїСЂРѕР±Р»РµРјР° вЂ“ РїРѕС‡С‚Рё РЅРµ РѕР±СЃСѓР¶РґР°РµС‚СЃСЏ! <br />
+  РЎС‚СЂР°С€РЅР° РЅРµ В«РЈРїСЂР°РІР»СЏРµРјР°СЏ РґРµРјРѕРєСЂР°С‚РёСЏВ», Р° С‚Рѕ, С‡С‚Рѕ РѕРЅР° РјРѕР¶РµС‚ РїСЂРёРІРµСЃС‚Рё Рє РіРёР±РµР»Рё С‡РµР»РѕРІРµС‡РµСЃС‚РІР°. РќРѕ Р»СЋРґРё РЅРµ РІРёРґСЏС‚ СЌС‚РѕРіРѕ. </p>
 
-<p>Необходимы общественные внимание и сеть, которая бы  занималась этой проблемой. <br />
-  Если Вы согласны с этим, то не могли бы Вы высказать Ваше  мнение – как быть? <br />
-  Можете ли Вы посоветовать, например, соцсеть, которая бы: <br />
-  1. Не требовала бы при регистрации никакой информации о себе,  например, для рекламы. <br />
-  2. Была децентрализованной для непотопляемости и неизвестности  количества участников. <br />
-  3. Допускала бы, желательно,  произвольное структурирование по мнениям участников. <br />
-  4. Не использовала, желательно, анонимайзеры, поскольку их  использование запрещается. </p>
+<p>РќРµРѕР±С…РѕРґРёРјС‹ РѕР±С‰РµСЃС‚РІРµРЅРЅС‹Рµ РІРЅРёРјР°РЅРёРµ Рё СЃРµС‚СЊ, РєРѕС‚РѕСЂР°СЏ Р±С‹  Р·Р°РЅРёРјР°Р»Р°СЃСЊ СЌС‚РѕР№ РїСЂРѕР±Р»РµРјРѕР№. <br />
+  Р•СЃР»Рё Р’С‹ СЃРѕРіР»Р°СЃРЅС‹ СЃ СЌС‚РёРј, С‚Рѕ РЅРµ РјРѕРіР»Рё Р±С‹ Р’С‹ РІС‹СЃРєР°Р·Р°С‚СЊ Р’Р°С€Рµ  РјРЅРµРЅРёРµ вЂ“ РєР°Рє Р±С‹С‚СЊ? <br />
+  РњРѕР¶РµС‚Рµ Р»Рё Р’С‹ РїРѕСЃРѕРІРµС‚РѕРІР°С‚СЊ, РЅР°РїСЂРёРјРµСЂ, СЃРѕС†СЃРµС‚СЊ, РєРѕС‚РѕСЂР°СЏ Р±С‹: <br />
+  1. РќРµ С‚СЂРµР±РѕРІР°Р»Р° Р±С‹ РїСЂРё СЂРµРіРёСЃС‚СЂР°С†РёРё РЅРёРєР°РєРѕР№ РёРЅС„РѕСЂРјР°С†РёРё Рѕ СЃРµР±Рµ,  РЅР°РїСЂРёРјРµСЂ, РґР»СЏ СЂРµРєР»Р°РјС‹. <br />
+  2. Р‘С‹Р»Р° РґРµС†РµРЅС‚СЂР°Р»РёР·РѕРІР°РЅРЅРѕР№ РґР»СЏ РЅРµРїРѕС‚РѕРїР»СЏРµРјРѕСЃС‚Рё Рё РЅРµРёР·РІРµСЃС‚РЅРѕСЃС‚Рё  РєРѕР»РёС‡РµСЃС‚РІР° СѓС‡Р°СЃС‚РЅРёРєРѕРІ. <br />
+  3. Р”РѕРїСѓСЃРєР°Р»Р° Р±С‹, Р¶РµР»Р°С‚РµР»СЊРЅРѕ, В РїСЂРѕРёР·РІРѕР»СЊРЅРѕРµ СЃС‚СЂСѓРєС‚СѓСЂРёСЂРѕРІР°РЅРёРµ РїРѕ РјРЅРµРЅРёСЏРј СѓС‡Р°СЃС‚РЅРёРєРѕРІ. <br />
+  4. РќРµ РёСЃРїРѕР»СЊР·РѕРІР°Р»Р°, Р¶РµР»Р°С‚РµР»СЊРЅРѕ, Р°РЅРѕРЅРёРјР°Р№Р·РµСЂС‹, РїРѕСЃРєРѕР»СЊРєСѓ РёС…  РёСЃРїРѕР»СЊР·РѕРІР°РЅРёРµ Р·Р°РїСЂРµС‰Р°РµС‚СЃСЏ. </p>
 
-<p>Мы сторонники ненасилия и собираюсь действовать 100% открыто и  в рамках закона, но опасаюсь создавать организацию через соцсети типа  «ВКонтакте»   , поскольку вопросы затрагивают уже существующие  манипуляцию и поляризацию. <br />
-  Мы не хотим осложнять жизнь участникам, живущим в авторитарных  странах, разглашая их персональные данные. </p>
+<p>РњС‹ СЃС‚РѕСЂРѕРЅРЅРёРєРё РЅРµРЅР°СЃРёР»РёСЏ Рё СЃРѕР±РёСЂР°СЋСЃСЊ РґРµР№СЃС‚РІРѕРІР°С‚СЊ 100% РѕС‚РєСЂС‹С‚Рѕ Рё  РІ СЂР°РјРєР°С… Р·Р°РєРѕРЅР°, РЅРѕ РѕРїР°СЃР°СЋСЃСЊ СЃРѕР·РґР°РІР°С‚СЊ РѕСЂРіР°РЅРёР·Р°С†РёСЋ С‡РµСЂРµР· СЃРѕС†СЃРµС‚Рё С‚РёРїР°  В«Р’РљРѕРЅС‚Р°РєС‚РµВ»   , РїРѕСЃРєРѕР»СЊРєСѓ РІРѕРїСЂРѕСЃС‹ Р·Р°С‚СЂР°РіРёРІР°СЋС‚ СѓР¶Рµ СЃСѓС‰РµСЃС‚РІСѓСЋС‰РёРµ  РјР°РЅРёРїСѓР»СЏС†РёСЋ Рё РїРѕР»СЏСЂРёР·Р°С†РёСЋ. <br />
+  РњС‹ РЅРµ С…РѕС‚РёРј РѕСЃР»РѕР¶РЅСЏС‚СЊ Р¶РёР·РЅСЊ СѓС‡Р°СЃС‚РЅРёРєР°Рј, Р¶РёРІСѓС‰РёРј РІ Р°РІС‚РѕСЂРёС‚Р°СЂРЅС‹С…  СЃС‚СЂР°РЅР°С…, СЂР°Р·РіР»Р°С€Р°СЏ РёС… РїРµСЂСЃРѕРЅР°Р»СЊРЅС‹Рµ РґР°РЅРЅС‹Рµ. </p>
 
-<p>Расчет не на то, чтобы прятаться, а на: <br />
-  1. Спокойствие участников. <br />
-  2. Отсутствие законных слежки и доказательств того, что Джо  есть Иван. Преступниками будут уже те, кто выслеживает. <br />
-  3. Затратность отслеживания P2P-сетей. <br />
-  4. Использование анонимайзеров – под личную ответственность. <br />
-  Нормативная децентрализация – это отсутствие не только руководства,  но и единых правил и коллективной ответственности: <br />
-  4.1. Сотрудничество участников ограничено вопросами  выживания Цивилизации. <br />
-  4.2. Независимое произвольное структурирование,  группирование участников. </p>
+<p>Р Р°СЃС‡РµС‚ РЅРµ РЅР° С‚Рѕ, С‡С‚РѕР±С‹ РїСЂСЏС‚Р°С‚СЊСЃСЏ, Р° РЅР°: <br />
+  1. РЎРїРѕРєРѕР№СЃС‚РІРёРµ СѓС‡Р°СЃС‚РЅРёРєРѕРІ. <br />
+  2. РћС‚СЃСѓС‚СЃС‚РІРёРµ Р·Р°РєРѕРЅРЅС‹С… СЃР»РµР¶РєРё Рё РґРѕРєР°Р·Р°С‚РµР»СЊСЃС‚РІ С‚РѕРіРѕ, С‡С‚Рѕ Р”Р¶Рѕ  РµСЃС‚СЊ РРІР°РЅ. РџСЂРµСЃС‚СѓРїРЅРёРєР°РјРё Р±СѓРґСѓС‚ СѓР¶Рµ С‚Рµ, РєС‚Рѕ РІС‹СЃР»РµР¶РёРІР°РµС‚. <br />
+  3. Р—Р°С‚СЂР°С‚РЅРѕСЃС‚СЊ РѕС‚СЃР»РµР¶РёРІР°РЅРёСЏ P2P-СЃРµС‚РµР№. <br />
+  4. РСЃРїРѕР»СЊР·РѕРІР°РЅРёРµ Р°РЅРѕРЅРёРјР°Р№Р·РµСЂРѕРІ вЂ“ РїРѕРґ Р»РёС‡РЅСѓСЋ РѕС‚РІРµС‚СЃС‚РІРµРЅРЅРѕСЃС‚СЊ. <br />
+  РќРѕСЂРјР°С‚РёРІРЅР°СЏ РґРµС†РµРЅС‚СЂР°Р»РёР·Р°С†РёСЏ вЂ“ СЌС‚Рѕ РѕС‚СЃСѓС‚СЃС‚РІРёРµ РЅРµ С‚РѕР»СЊРєРѕ СЂСѓРєРѕРІРѕРґСЃС‚РІР°,  РЅРѕ Рё РµРґРёРЅС‹С… РїСЂР°РІРёР» Рё РєРѕР»Р»РµРєС‚РёРІРЅРѕР№ РѕС‚РІРµС‚СЃС‚РІРµРЅРЅРѕСЃС‚Рё: <br />
+  4.1. РЎРѕС‚СЂСѓРґРЅРёС‡РµСЃС‚РІРѕ СѓС‡Р°СЃС‚РЅРёРєРѕРІ РѕРіСЂР°РЅРёС‡РµРЅРѕ РІРѕРїСЂРѕСЃР°РјРё  РІС‹Р¶РёРІР°РЅРёСЏ Р¦РёРІРёР»РёР·Р°С†РёРё. <br />
+  4.2. РќРµР·Р°РІРёСЃРёРјРѕРµ РїСЂРѕРёР·РІРѕР»СЊРЅРѕРµ СЃС‚СЂСѓРєС‚СѓСЂРёСЂРѕРІР°РЅРёРµ,  РіСЂСѓРїРїРёСЂРѕРІР°РЅРёРµ СѓС‡Р°СЃС‚РЅРёРєРѕРІ. </p>
 
-<p>Высказывания, например, в соцсетях не преследуются, даже «экстремистские», <br />
-  Но в инструкции с-службы есть критерий - Создание  организации с помощью соцсетей? <br />
-  С-службы интересуют лишь «дестабилизирующие»    действия  и «здесь и сейчас»? <br />
-  Где подробнее по личной безопасности есть советы, статистика  «нарушений»-репрессий? </p>
+<p>Р’С‹СЃРєР°Р·С‹РІР°РЅРёСЏ, РЅР°РїСЂРёРјРµСЂ, РІ СЃРѕС†СЃРµС‚СЏС… РЅРµ РїСЂРµСЃР»РµРґСѓСЋС‚СЃСЏ, РґР°Р¶Рµ В«СЌРєСЃС‚СЂРµРјРёСЃС‚СЃРєРёРµВ», <br />
+  РќРѕ РІ РёРЅСЃС‚СЂСѓРєС†РёРё СЃ-СЃР»СѓР¶Р±С‹ РµСЃС‚СЊ РєСЂРёС‚РµСЂРёР№ - РЎРѕР·РґР°РЅРёРµ  РѕСЂРіР°РЅРёР·Р°С†РёРё СЃ РїРѕРјРѕС‰СЊСЋ СЃРѕС†СЃРµС‚РµР№? <br />
+  РЎ-СЃР»СѓР¶Р±С‹ РёРЅС‚РµСЂРµСЃСѓСЋС‚ Р»РёС€СЊ В«РґРµСЃС‚Р°Р±РёР»РёР·РёСЂСѓСЋС‰РёРµВ»    РґРµР№СЃС‚РІРёСЏ  Рё В«Р·РґРµСЃСЊ Рё СЃРµР№С‡Р°СЃВ»? <br />
+  Р“РґРµ РїРѕРґСЂРѕР±РЅРµРµ РїРѕ Р»РёС‡РЅРѕР№ Р±РµР·РѕРїР°СЃРЅРѕСЃС‚Рё РµСЃС‚СЊ СЃРѕРІРµС‚С‹, СЃС‚Р°С‚РёСЃС‚РёРєР°  В«РЅР°СЂСѓС€РµРЅРёР№В»-СЂРµРїСЂРµСЃСЃРёР№? </p>
 
-<p>Например, участниками могут быть выработаны для себя  рекомендации по: <br />
-  1. Деятельности в рамках закона. <br />
-  2. Увеличению издержек слежки и помех. </p>
+<p>РќР°РїСЂРёРјРµСЂ, СѓС‡Р°СЃС‚РЅРёРєР°РјРё РјРѕРіСѓС‚ Р±С‹С‚СЊ РІС‹СЂР°Р±РѕС‚Р°РЅС‹ РґР»СЏ СЃРµР±СЏ  СЂРµРєРѕРјРµРЅРґР°С†РёРё РїРѕ: <br />
+  1. Р”РµСЏС‚РµР»СЊРЅРѕСЃС‚Рё РІ СЂР°РјРєР°С… Р·Р°РєРѕРЅР°. <br />
+  2. РЈРІРµР»РёС‡РµРЅРёСЋ РёР·РґРµСЂР¶РµРє СЃР»РµР¶РєРё Рё РїРѕРјРµС…. </p>
 
-<h5> Как соединить единомышленников по теме?: </h5>
-<p> «Сетевым маркетингом» рассылкой через e-mail собрать  единомышленников не удается. <br />
-  Попытаемся пойти на компромисс: <br />
-  1. Использую все же Facebook, но не для переписки, а для обмена e-mail-ми. <br />
-  2. Открытость с моей стороны. </p>
+<h5> РљР°Рє СЃРѕРµРґРёРЅРёС‚СЊ РµРґРёРЅРѕРјС‹С€Р»РµРЅРЅРёРєРѕРІ РїРѕ С‚РµРјРµ?: </h5>
+<p> В«РЎРµС‚РµРІС‹Рј РјР°СЂРєРµС‚РёРЅРіРѕРјВ» СЂР°СЃСЃС‹Р»РєРѕР№ С‡РµСЂРµР· e-mail СЃРѕР±СЂР°С‚СЊ  РµРґРёРЅРѕРјС‹С€Р»РµРЅРЅРёРєРѕРІ РЅРµ СѓРґР°РµС‚СЃСЏ. <br />
+  РџРѕРїС‹С‚Р°РµРјСЃСЏ РїРѕР№С‚Рё РЅР° РєРѕРјРїСЂРѕРјРёСЃСЃ: <br />
+  1. РСЃРїРѕР»СЊР·СѓСЋ РІСЃРµ Р¶Рµ Facebook, РЅРѕ РЅРµ РґР»СЏ РїРµСЂРµРїРёСЃРєРё, Р° РґР»СЏ РѕР±РјРµРЅР° e-mail-РјРё. <br />
+  2. РћС‚РєСЂС‹С‚РѕСЃС‚СЊ СЃ РјРѕРµР№ СЃС‚РѕСЂРѕРЅС‹. </p>
 
-<p> Будем очень благодарен, если Вы покажете мои письмо и координаты  людям обеспокоенным той же угрозой. Или дадите их аноним-координаты мне. <br />
-  Где, в каких сетях Вы рекомендуете искать активистов,  которые могут быть небезразличны к проблеме? - В централизованных организациях координаты  своих активистов не дают. <br />
-  Или вообще выскажетесь по проблеме. </p>
+<p> Р‘СѓРґРµРј РѕС‡РµРЅСЊ Р±Р»Р°РіРѕРґР°СЂРµРЅ, РµСЃР»Рё Р’С‹ РїРѕРєР°Р¶РµС‚Рµ РјРѕРё РїРёСЃСЊРјРѕ Рё РєРѕРѕСЂРґРёРЅР°С‚С‹  Р»СЋРґСЏРј РѕР±РµСЃРїРѕРєРѕРµРЅРЅС‹Рј С‚РѕР№ Р¶Рµ СѓРіСЂРѕР·РѕР№. РР»Рё РґР°РґРёС‚Рµ РёС… Р°РЅРѕРЅРёРј-РєРѕРѕСЂРґРёРЅР°С‚С‹ РјРЅРµ. <br />
+  Р“РґРµ, РІ РєР°РєРёС… СЃРµС‚СЏС… Р’С‹ СЂРµРєРѕРјРµРЅРґСѓРµС‚Рµ РёСЃРєР°С‚СЊ Р°РєС‚РёРІРёСЃС‚РѕРІ,  РєРѕС‚РѕСЂС‹Рµ РјРѕРіСѓС‚ Р±С‹С‚СЊ РЅРµР±РµР·СЂР°Р·Р»РёС‡РЅС‹ Рє РїСЂРѕР±Р»РµРјРµ? - Р’ С†РµРЅС‚СЂР°Р»РёР·РѕРІР°РЅРЅС‹С… РѕСЂРіР°РЅРёР·Р°С†РёСЏС… РєРѕРѕСЂРґРёРЅР°С‚С‹  СЃРІРѕРёС… Р°РєС‚РёРІРёСЃС‚РѕРІ РЅРµ РґР°СЋС‚. <br />
+  РР»Рё РІРѕРѕР±С‰Рµ РІС‹СЃРєР°Р¶РµС‚РµСЃСЊ РїРѕ РїСЂРѕР±Р»РµРјРµ. </p>
 
-<p>Сообщать Вам о продвижении данного Проекта? <br />
-  Предлагаем также не отвечать на оскорбления – не поддаваться  на провокации «сатанизации». </p>
+<p>РЎРѕРѕР±С‰Р°С‚СЊ Р’Р°Рј Рѕ РїСЂРѕРґРІРёР¶РµРЅРёРё РґР°РЅРЅРѕРіРѕ РџСЂРѕРµРєС‚Р°? <br />
+  РџСЂРµРґР»Р°РіР°РµРј С‚Р°РєР¶Рµ РЅРµ РѕС‚РІРµС‡Р°С‚СЊ РЅР° РѕСЃРєРѕСЂР±Р»РµРЅРёСЏ вЂ“ РЅРµ РїРѕРґРґР°РІР°С‚СЊСЃСЏ  РЅР° РїСЂРѕРІРѕРєР°С†РёРё В«СЃР°С‚Р°РЅРёР·Р°С†РёРёВ». </p>
 
-<h5> Примеры моих (Edil Edil) комментариев: </h5>
+<h5> РџСЂРёРјРµСЂС‹ РјРѕРёС… (Edil Edil) РєРѕРјРјРµРЅС‚Р°СЂРёРµРІ: </h5>
 <p> www.svoboda.org/a/30529054.html<br />
   www.svoboda.org/a/30538060.html<br />
   www.svoboda.org/a/30391409.html<br />
