--- a/2024_Rus/21Anarchism_and_Capitalism.htm
+++ b/2024_Rus/21Anarchism_and_Capitalism.htm
@@ -256,6 +256,33 @@
 <p>В информационную эпоху даже уголовное преследование может  быть централизованным.<br />
   Исторический аналог последнего – &quot;Охотники за  головами&quot; в США.</p>
 <p>Экологическое, метрологическое и всякое иное регулирование  тем более могут быть децентрализованными – в информационную эпоху.</p>
+
+
+<h4>Анти-эксклюзив:</h4>
+<h5>Анти-эксклюзив  на примере земельных отношений:</h5>
+<p>Принцип: Использует землю тот -  кто лучше е использует.<br />
+  Что означает лучше е использует<br />
+  - Экономически эффективнее, в том  числе:<br />
+  -- Обеспечивает более большую  социальную ответственность, в том числе более большую зарплату; <br />
+  - Экологически эффективнее.<br />
+  То есть с помощью плоской  демократической вырабатываются Совещательной сети вырабатываются Законы и  Протоколы оценки и сравнения разных пользователей земли.</p>
+<h5>Интеллектуальный  Анти-эксклюзив:</h5>
+<p>Произошло отделение авторского  права от авторов.<br />
+  Однако исключительных –  экономических прав не должно быть даже у авторов.<br />
+  Необходим запрет вообще исключительных  прав на противоестественную Интеллектуальную &quot;собственность&quot;.</p>
+<h5>Сила и деньги:</h5>
+<p>Экономический монополизм,  собственность необходимы были для защиты от политического монополизма – государей.<br />
+  Однако необходима ликвидация –  любого монополизма, любых исключительных прав, прежде всего – государей и вообще  государства. <br />
+  Тогда станет не нужной защита от  них в виде сильной собственности.<br />
+  Власть, исполнительная власть, политика  - есть право на насилие.<br />
+  Да здравствует король - как бесправное  декоративное украшение.</p>
+<h5>Распределенное  насилие:</h5>
+<p>&quot;Минимальное  государство&quot;- защитник и гарант прав человека не нужно.<br />
+  Самоуправление есть независимое  применение силы – только для самообороны.<br />
+  Однако при этом необходимы - Всемирные  законы-запреты на ограничения чужих прав и свобод, и всемирные же протоколы добровольной  самообороны.</p>
+
+
+ 
 <h5>Собственность есть отсутствие свободы  предпринимательства:</h5>
 <p>Например, конкретная Интеллектуальная &quot;собственность&quot;  ограничивает свободу всех людей именно в самых перспективных направлениях  предпринимательства.<br />
   Совокупная же &quot;зонтичная &quot;Интеллектуальная &quot;собственность&quot;  вообще оставляет &quot;свободу&quot; деятельности лишь в бесперспективных  направлениях.</p>
@@ -378,6 +405,17 @@
   Однако Коммунизм еще более опасен, чем &quot;капитализм&quot;,  поскольку при нем контролируется непосредственно социум.<br />
   Демократия есть отделение Собственности от политики.<br />
   Спасение Человечества возможно лишь через развитие  Демократии.</p>
+
+
+<h5>Монополизм ЦК КПСС:</h5>
+<p>В 1988-м в Новочеркасске я  предложил функционеру КПСС разрешить фракции внутри КПСС.<br />
+  Чиновник отказал.<br />
+  Я ответил, что придется тогда  ликвидировать саму КПСС.</p>
+<p>КПСС умерла не в 1992-м, а в  1922-м:<br />
+  Марксизм учит, что жизнь – это  развитие, а развитие возможно только при разнообразии.<br />
+  В 1922-м ВКП(б) совершила  самоубийство, запретив фракции. </p>
+
+ 
 <h5>Я ищу людей, которые верят</h5>
 <p>Я не могу доказать<br />
   Сейчас – эпоха интернета, эпоха коллективного творчества.<br />
@@ -391,6 +429,8 @@
 <p>&quot;Connor&quot;</p>
 <p>22882</p>
 <p>&nbsp;</p>
+
+ 
 <h2>Эксклюзив и волатильность:</h2>
 <p>&nbsp;</p>
 <p>Эксклюзив является одним из главных, если не главным  фактором волатильности на рынке ценных бумаг.<br />
