--- a/2024_Rus/12Deliberative_network.htm
+++ b/2024_Rus/12Deliberative_network.htm
@@ -94,9 +94,17 @@
   Предназначение Совещательной  сети определяет ее организацию в цифровую эпоху: <br />
   1. Организация Совещательной сети должна быть  &quot;плоской&quot; = не иерархической;<br />
   2. Совещательная сеть должна быть независимой от госорганов.</p>
+ 
 <h4>Зачем нужна Совещательная сеть:</h4>
 <p>Зачем нужна &quot;дважды социальная&quot; сеть, то есть  научная социальная сеть, ориентированная на решение социальных вопросов?</p>
-<h5>Кризис демократии:</h5>
+
+ <p> Цель и предназначение Совещательной сети есть – принятие решений по самоуправлению - вместо Правительства. <br />
+То есть не выработка норм через потенциально коррумпированных депутатов парламентских комиссий,
+  и не ожидание правильных решений от министерств, а - непосредственная выработка норм и принятие решений - в Плоской структуре
+  - самими людьми - по всему комплексу социальных вопросов - здравоохранению, образованию, самообороне от гос. террористов и т д.
+  – опираясь на современные возможности IT. </p>
+ 
+ <h5>Кризис демократии:</h5>
 <p>С 1-й стороны, традиционная демократическая политическая, в  частности - партийная система уже не работает.<br />
   В Украине, России и СНГ партий, созданных представителями  самого народа и представляющих народ нет и не было уже свыше 100 лет.<br />
   Попытка их возрождения в условиях нарастающей эффективности  полит-технологий – не является оптимальным направлением.<br />
