--- a/2024_Rus/12Deliberative_network.htm
+++ b/2024_Rus/12Deliberative_network.htm
@@ -67,10 +67,12 @@
      Астроном Концепт </a>
  </li>
 
-
-<li>  <a href="../2014_rus.htm">
-     <h4> 2014 </h4> </a>
+<li>  <h4> 2013-2023 </h4>
  </li>
+<li>   <a href="https://dw2020.narod.ru/">
+    https://dw2020.narod.ru/ </a>
+ </li>
+
 </ul>
 
 </td>
